--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ html, body {
   transition: background-color 0.5s;
 }
 
+#app {
+  width: 100%;
+  height: 100%;
+}
+
 /* 滚动条 */
 ::-webkit-scrollbar {/*滚动条整体样式*/
   width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
