--- a/public/css/index.css
+++ b/public/css/index.css
@@ -179,27 +179,6 @@ input {
     color: #ff5858;
 }
 
-.tools_panel {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    margin-left: -130px;
-    width: 260px;
-    height: 35px;
-    background-color: white;
-}
-.tools_panel_bottom {
-    position: absolute;
-    bottom: 6px;
-    right: 6px;
-    width: 200px;
-    padding-bottom: 10px;
-    background-color: rgba(255,255,255,0.5);
-    border-radius: 2px;
-}
-.tools_panel_bottom:hover {
-  background-color: rgba(255,255,255,1);
-}
 .head_img {
     width: 20px;
     height: 20px;
@@ -225,11 +204,10 @@ input {
 /* 百度地图相关样式 */
 div.tip_content {
     background-color: white;
-    border: 1px solid #BFBDBD;
-    box-shadow: 0px 3px 6px 0px #999;
+    box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.3);
 }
 div.tip_content:hover {
-    box-shadow: 0px 3px 6px 0px #aaa;
+    box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.4);
 }
 div.tip_title {
     height: 50px;
